cabal-version:      2.4
name:               hangman-game
version:            0.1.0.0
synopsis:           Playing Hangman
homepage:           https://github.com/alternateved/hangman-game
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tomasz Hołubowicz
maintainer:         alternateved@gmail.com
category:           Game
extra-source-files: CHANGELOG.md

executable hangman-game
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0,
                      random,
                      split
    hs-source-dirs:   src
    default-language: Haskell2010
